---------------------------------------------------------------------------------------------------
Version: 4.1.36
Date: ????
  Bugfixes:
    - Fixed that the omincium plate recipe icon overlay was also added to the item icon
---------------------------------------------------------------------------------------------------
Version: 4.1.35
Date: 2023.08.24
  Changes:
    - Reduced the required amount of stone / omnite for omnicium
---------------------------------------------------------------------------------------------------
Version: 4.1.34
Date: 2023.04.04
  Bugfixes:
    - Fixed crushed quartz & tin being unobtainable for initial science with bare PyRO
    - Fixed that adding an ore for initial omnitraction that requires a fluid to mine could cause
      a crash if that same ore was already in tier 1
    - Fixed that fluid omnitractions always outputted the fluid at the default temperature
---------------------------------------------------------------------------------------------------
Version: 4.1.33
Date: 2023.03.19
  Changes:
    - Reduced the amount of crushed stone required for omnicium from 4 to 3 with angels refining
---------------------------------------------------------------------------------------------------
Version: 4.1.32
Date: 2022.12.11
  Changes:
    - Reduced the required science packs for omnium processing from 25 to 15
    - Reduced the amount of crushed stone required for omnicium from 4 to 2 without angels refining
  Compatibility:
    - Added intital salt extraction recipes for baketorio
    - Added kerogen extraction with pypetroleumhandling
  Bugfixes:
    - Fixed that the "Sorting gems" recipe was added even though unsorted gems were disabled by bob
---------------------------------------------------------------------------------------------------
Version: 4.1.31
Date: 2022.08.17
  Features:
    - WARNING: THIS WILL BREAK EXISTING SETUPS!