@@ -3,6 +3,7 @@ Version: 4.1.36
 Date: ????
   Bugfixes:
     - Fixed that the omincium plate recipe icon overlay was also added to the item icon
+    - Fixed the scale / shift of the small fluid icon of crude refinement technologies
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.35
 Date: 2023.08.24
